# 4linux-python-devops

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml
