[tool.poetry]
name = "521"
version = "0.1.0"
description = ""
authors = ["Daniel Prata <daniel.silva@lionx.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"
Flask = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
